--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/md5": "^2.3.2",
+    "@types/mysql-import": "^2.0.1",
     "@types/node": "^18.16.9",
     "@types/readline-sync": "^1.4.4",
     "@types/sequelize": "^4.28.15",
@@ -44,6 +45,7 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "mysql-import": "^5.0.26",
     "mysql2": "^3.3.1",
     "sequelize": "^6.31.1",
     "sequelize-cli-typescript": "^3.2.0-c"
