--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
       - ./backend:/app-backend # Mapeia o diretório ./backend do host para o diretório /app-backend do container
     tty: true # Habilita o pseudo-TTY
     stdin_open: true # Mantém o STDIN aberto mesmo se não anexado
-    command: bash -c "npm install && npm run dev" # Comando para iniciar o serviço  
+    command: "npm run dev" # Comando para iniciar o serviço  
     restart: always # Reinicia o container automaticamente se ele parar
     environment:
       # Variáveis de ambiente para o serviço
@@ -59,9 +59,9 @@ services:
     environment:
       # Variáveis de ambiente para o serviço
       MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: shopper_db
-      MYSQL_USER: root
-      MYSQL_PASSWORD: 123456
+      # MYSQL_DATABASE: shopper_db
+      # MYSQL_USER: root
+      # MYSQL_PASSWORD: 123456
     networks:
       - shopper_network-back-to-bd # Adiciona este serviço à rede especificada
     cap_add:
