--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "predev": "npm run build && npm run db:reset",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate",
-    "import:sql": "ts-node ./src/services/DatabaseImportService/DatabaseImportService.ts",
+    "import:sql": "./database_install.sh",
     "start": "ts-node src/index.ts",
     "dev": "nodemon --watch \"./src/**\" --exec ts-node ./src/index.ts"
   },
