--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,11 +26,19 @@ services:
       - 3001:3001 # Mapeia a porta 3001 do container para a porta 3001 do host
     working_dir: /app-backend # Define o diretório de trabalho dentro do container
     volumes:
-      - ./backend:/app-backend # Mapeia o diretório ./backend do host para o diretório /app-backend do container
+      - ./check-db.sh:/app/check-db.sh # Mapeia o diretório ./backend do host para o diretório /app-backend do container
+      - ./backend/.env:/app-backend/.env # Mapeia o diretório ./backend/.env do host para o diretório /app-backend/.env do container
     tty: true # Habilita o pseudo-TTY
     stdin_open: true # Mantém o STDIN aberto mesmo se não anexado
     user: "1000:1000" # Define o usuário e grupo do container, foi necessário para o docker executar os scripts do package.json. O usuário e grupo 1000 são os padrões do Linux: id -u <seu_usuario> e id -g <seu_usuario> para ver os seus ids
-    command: "npm run dev" # Comando para iniciar o serviço padrão => "npm run dev"
+    command:
+      [
+        "/app/check-db.sh",
+        "db",
+        "npm",
+        "run",
+        "dev:complete"
+      ]
     restart: always # Reinicia o container automaticamente se ele parar
     environment:
       # Variáveis de ambiente para o serviço
@@ -45,7 +53,9 @@ services:
       - shopper_network-back-to-front
       - shopper_network-back-to-bd
     depends_on:
-      - db # Este serviço depende do serviço db
+      - db
+        # Este serviço depende do serviço db
+        # condition: service_healthy # Só inicia o serviço backend quando o serviço db estiver saudável
     cap_add:
       - SYS_NICE # Adiciona capacidades ao container
 
@@ -60,12 +70,19 @@ services:
     environment:
       # Variáveis de ambiente para o serviço
       MYSQL_ROOT_PASSWORD: 123456
+    command: --default-authentication-plugin=mysql_native_password # Define o comando a ser executado ao iniciar o container
     networks:
       - shopper_network-back-to-bd # Adiciona este serviço à rede especificada
     cap_add:
       - SYS_NICE # Adiciona capacidades ao container
     expose:
       - '3306' # Expõe a porta 3306
+    healthcheck:
+      # Verifica se o serviço está saudável
+      test: [ "CMD", "mysqladmin", "ping", "-h", "db" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     # Caso queira executar um script SQL ao iniciar o container, descomente as linhas abaixo
     # volumes:
     #   - ./backend/src/database/database.sql:/docker-entrypoint-initdb.d/database.sql
