--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
     "md5": "^2.3.0",
     "mysql-import": "^5.0.26",
     "mysql2": "^3.3.1",
+    "node-sql-parser": "^4.6.6",
     "sequelize": "^6.31.1",
     "sequelize-cli-typescript": "^3.2.0-c"
   }
