improvement(Database script): Cria também um script de node para ser usado de maneira alternativa

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,11 +14,15 @@
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
     "skipLibCheck": true,
+    "types": [
+      "node"
+    ],
     "paths": {
       "*": [
         "node_modules/*"
       ]
-    }
+    },
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*"
