--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "predev": "npm run build && npm run db:reset",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate",
-    "import:sql": "./database_install.sh",
+    "import:sql": "ts-node ./src/scripts/database_install.ts",
     "start": "ts-node src/index.ts",
     "dev": "nodemon --watch \"./src/**\" --exec ts-node ./src/index.ts",
     "dev:complete": "concurrently \"npm:dev\" \"npm run import:sql 2 && npx sequelize-cli db:seed:all\""
@@ -20,10 +20,11 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/inquirer": "^9.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/md5": "^2.3.2",
     "@types/mysql-import": "^2.0.1",
-    "@types/node": "^18.16.9",
+    "@types/node": "^18.16.13",
     "@types/readline-sync": "^1.4.4",
     "@types/sequelize": "^4.28.15",
     "@types/validator": "^13.6.6",
@@ -45,6 +46,7 @@
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "express-async-errors": "^3.1.1",
+    "inquirer": "^7.3.3",
     "joi": "^17.9.2",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
