--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
     working_dir: /app-backend # Define o diretório de trabalho dentro do container
     volumes:
       - ./check-db.sh:/app/check-db.sh # Mapeia o diretório ./backend do host para o diretório /app-backend do container
-      - ./backend/.env:/app-backend/.env # Mapeia o diretório ./backend/.env do host para o diretório /app-backend/.env do container
+      - ./backend/.docker.env:/app-backend/.env # Mapeia o diretório ./backend/.env do host para o diretório /app-backend/.env do container
     tty: true # Habilita o pseudo-TTY
     stdin_open: true # Mantém o STDIN aberto mesmo se não anexado
     user: "1000:1000" # Define o usuário e grupo do container, foi necessário para o docker executar os scripts do package.json. O usuário e grupo 1000 são os padrões do Linux: id -u <seu_usuario> e id -g <seu_usuario> para ver os seus ids
@@ -40,15 +40,17 @@ services:
         "dev:complete"
       ]
     restart: always # Reinicia o container automaticamente se ele parar
-    environment:
-      # Variáveis de ambiente para o serviço
-      APP_PORT: 3001
-      JWT_SECRET: jwt_secret
-      MYSQL_USER: root
-      MYSQL_PASSWORD: 123456
-      MYSQL_DB: shopper_db
-      MYSQL_HOST: db
-      MYSQL_PORT: 3306
+    env_file:
+      - ./backend/.docker.env # Define o arquivo de variáveis de ambiente
+    # environment:
+    #   # Variáveis de ambiente para o serviço
+    #   APP_PORT: ${APP_PORT}
+    #   JWT_SECRET: ${JWT_SECRET}
+    #   MYSQL_USER: ${MYSQL_USER}
+    #   MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    #   MYSQL_DB: ${MYSQL_DB}
+    #   MYSQL_HOST: db
+    #   MYSQL_PORT: ${MYSQL_PORT}
     networks:
       - shopper_network-back-to-front
       - shopper_network-back-to-bd
@@ -56,8 +58,8 @@ services:
       - db
         # Este serviço depende do serviço db
         # condition: service_healthy # Só inicia o serviço backend quando o serviço db estiver saudável
-    cap_add:
-      - SYS_NICE # Adiciona capacidades ao container
+    # cap_add:
+    #   - SYS_NICE # Adiciona capacidades ao container
 
   db:
     # Nome do serviço do banco de dados
