--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript",
+  "name": "Desagio Shopper",
   "version": "1.0.0",
-  "description": "",
+  "description": "O README completo se encontra em: https://github.com/imsamuelcovalero/Desafio_Shopper#readme",
   "main": "index.js",
   "scripts": {
     "build": "npx -y tsc",
@@ -14,7 +14,10 @@
     "dev:complete": "concurrently \"npm:dev\" \"npm run import:sql 2 && npx sequelize-cli db:seed:all\""
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Samuel Covalero dos Reis",
+    "email": "reis_samuel@hotmail.com"
+  },
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
