fix(Name): Corrige o nome no package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Desagio Shopper",
+  "name": "desafio-shopper",
   "version": "1.0.0",
   "description": "O README completo se encontra em: https://github.com/imsamuelcovalero/Desafio_Shopper#readme",
   "main": "index.js",
